# CSET

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-config.yaml  .tmp-srcCSEToperators_colorbar_definition.json-sorted.json  CODE_OF_CONDUCT.md  LICENCE  MANIFEST.in  Makefile  README.md  cset-workflow  development.yaml  environment.yml  flow.cylc  lfric_parser.py  pyproject.toml  rose-suite.conf.example  sbatch_wrapper.sbatch  setup.cfg  thinking.py  thinking.yaml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  other.md
.github/workflows/: check-required-reviews.yml  conda-lock.yml  documentation.yml  pr_ci.yml  pre-commit-update.yml  pull-request-checks.yml  pull_request_checks.yml  release.yml  scheduled-updates.yml  tox.yml  weekly-checks.yml
cset-workflow/: .gitignore  README.md  flow.cylc  install_restricted_files.sh  install_site_specific_workflow.sh  rose-suite-metoffice_lfric.conf  rose-suite.conf.backup  rose-suite.conf.example  rose-suite.conf_PLEV  rose-suite.conf_SURF  rose-suite_RAL3LFRic.conf.example
cset-workflow/Jinja2Globals/: glob.py  zip.py
cset-workflow/extra-meta/: alphabetical_dict.py  colorbar_dict.json  colorbar_dict_alphabetical.json  sort_json.py
cset-workflow/includes/: aoa_diag.cylc  basic_qq_plot.cylc  case_aggregation_options.cylc  crosssection.cylc  deterministic_domain_histogram_series.cylc  deterministic_domain_histogram_series_case_study_aggregation.cylc  deterministic_domain_histogram_series_case_study_aggregation_lead_time.cylc  deterministic_domain_mean_plevel_time_series.cylc  deterministic_domain_mean_surface_time_series.cylc  deterministic_domain_mean_surface_time_series_case_study_aggregation_hour_of_day.cylc  deterministic_domain_mean_surface_time_series_case_study_aggregation_lead_time.cylc  deterministic_domain_mean_surface_time_series_case_study_aggregation_validity_time.cylc  deterministic_domain_mean_vertical_model_level_profile_series.cylc  deterministic_domain_mean_vertical_model_level_profile_series_case_study_aggregation_hour_of_day.cylc  deterministic_domain_mean_vertical_model_level_profile_series_case_study_aggregation_lead_time.cylc  deterministic_domain_mean_vertical_model_level_profile_series_case_study_aggregation_validity_time.cylc  deterministic_domain_mean_vertical_pressure_profile_series.cylc  deterministic_domain_mean_vertical_pressure_profile_series_case_study_aggregation_hour_of_day.cylc  deterministic_domain_mean_vertical_pressure_profile_series_case_study_aggregation_lead_time.cylc  deterministic_domain_mean_vertical_pressure_profile_series_case_study_aggregation_validity_time.cylc  deterministic_domain_mean_vertical_profile_modellevel_series.cylc  deterministic_domain_mean_vertical_profile_series.cylc  deterministic_domain_surface_histogram_series.cylc  deterministic_domain_surface_histogram_series_case_study_aggregation.cylc  deterministic_domain_surface_histogram_series_case_study_aggregation_hour_of_day.cylc  deterministic_domain_surface_histogram_series_case_study_aggregation_lead_time.cylc  deterministic_plot_aggregate_precipitation.cylc  deterministic_plot_cape_ratio.cylc  deterministic_plot_inflow_properties.cylc  deterministic_plot_model_level_air_temp.cylc  deterministic_plot_surface_air_temp.cylc  deterministic_single_point_surface_time_series.cylc  domain_histogram_series.cylc  domain_mean_time_series_stash.cylc  ensemble_plot_surface_air_temp.cylc  histogram_field.cylc  histogram_field_aggregation.cylc  histogram_field_aggregation_all.cylc  histogram_mlevel_field.cylc  histogram_mlevel_field_aggregation.cylc  (+74 more)
cset-workflow/meta/: rose-meta.conf  rose-meta.conf.jinja2
cset-workflow/opt/: rose-suite-RAL3LFRIC.conf
cset-workflow/requirements/: environment.yml
delme/: run_cell_statistics.py
docs/papers/: paper.bib  paper.md
docs/source/: Example.rst  changelog.rst  conf.py  documentation.rst  index.rst  ipsum.rst  operators.rst  working-practices.rst
includes/: basic_qq_plot.cylc  deterministic_domain_mean_surface_time_series_case_study_aggregation_validity_time.cylc  deterministic_domain_mean_vertical_model_level_profile_series_case_study_aggregation_hour_of_day.cylc  deterministic_domain_mean_vertical_pressure_profile_series_case_study_aggregation_hour_of_day.cylc  deterministic_domain_mean_vertical_pressure_profile_series_case_study_aggregation_validity_time.cylc  deterministic_domain_surface_histogram_series_case_study_aggregation.cylc  deterministic_single_point_surface_time_series.cylc  metplus_grid_stat.cylc  plot_spatial_mlevel_model_field_case_study_aggregation_validity_time.cylc  plot_spatial_plevel_model_field_case_study_aggregation_hour_of_day.cylc  plot_spatial_plevel_model_field_case_study_aggregation_validity_time.cylc  plot_spatial_surface_model_field_case_study_aggregation_hour_of_day.cylc  plot_spatial_surface_model_field_case_study_aggregation_validity_time.cylc  spatial_surface_difference.cylc
lib/python/: jinja_utils.py
meta/: rose-meta.conf  rose-meta.conf.jinja2
meta/diagnostics/: rose-meta.conf
requirements/: environment.yml
requirements/development-locks/: py313-lock-linux-64.txt
requirements/locks/: latest  py310-lock-linux-64.txt  py311-lock-linux-64.txt  py312-lock-linux-64.txt  py313-lock-linux-64.txt  py314-lock-linux-64.txt  py38-lock-linux-64.txt  py39-lock-linux-64.txt  sources
scripts/: check-conda-lockfiles.sh  generate_rose_meta.py  sort_json.py  update-developer-dependencies.sh
src/CSET/: __init__.py  __main__.py  _common.py  _common_operators.py  extract_workflow.py  graph.py  run-operators.py  run.py
tests/: __init__.py  conftest.py  test_cell_statistics.py  test_cli.py  test_common.py  test_common_operators.py  test_constraints.py  test_example_operator.py  test_execute_recipe.py  test_fetch_nimrod.py  test_filters.py  test_generate_constraints.py  test_graph.py  test_misc.py  test_plots.py  test_read.py  test_recipe_parser.py  test_recipes.py  test_run.py  test_run_recipes.py  test_web_interface.py  test_write.py
(+1014 files in other folders)
